tests/snapshots/cli__adjust_activity_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log-file"
    - "C:\\Users\\dailyuse\\backup\\PARA\\Personal\\2 Areas\\Developer\\Maintenance\\pace\\pace-rs\\pace\\./tests/generated\\.tmpLKmMYT\\activities.pace.toml"
    - now
---
success: true
exit_code: 0
----- stdout -----
📆  Activity: "NewDescription" (NewCategory::SubCategory) started just now in UTC+01:00

----- stderr -----
