tests/snapshots/cli__begin_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log-file"
    - "C:\\Users\\dailyuse\\backup\\PARA\\Personal\\2 Areas\\Developer\\Maintenance\\pace\\pace-rs\\pace\\./tests/generated\\.tmpSuabVa\\activities.pace.toml"
    - begin
    - MyActivity
    - "--tags"
    - "tag1,tag2"
    - "--category"
    - "MyCategory::SubCategory"
---
success: true
exit_code: 0
----- stdout -----
📆  Activity: "MyActivity" (MyCategory::SubCategory) started just now in UTC+01:00

----- stderr -----
