tests/snapshots/cli__end_with_active_activity_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log-file"
    - "D:\\a\\pace\\pace\\./tests/generated\\.tmp6Eme4G\\activities.pace.toml"
    - end
---
success: true
exit_code: 0
----- stdout -----
Ended 📆  Activity: "MyActivity" (MyCategory::SubCategory) started just now in UTC+00:00

----- stderr -----
