tests/snapshots/cli__hold_with_active_activity_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--activity-log-file"
    - "C:\\Users\\dailyuse\\backup\\PARA\\Personal\\2 Areas\\Developer\\Maintenance\\pace\\pace-rs\\pace\\./tests/generated\\.tmp7YyuFZ\\activities.pace.toml"
    - hold
---
success: true
exit_code: 0
----- stdout -----
Held 📆  Activity: "MyActivity" (MyCategory::SubCategory) started just now

----- stderr -----
