tests/snapshots/cli__now_with_active_activity_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log-file"
    - "C:\\Users\\dailyuse\\backup\\PARA\\Personal\\2 Areas\\Developer\\Maintenance\\pace\\pace-rs\\pace\\./tests/generated\\.tmpR8DZM2\\activities.pace.toml"
    - now
---
success: true
exit_code: 0
----- stdout -----
📆  Activity: "MyActivity" (MyCategory::SubCategory) started just now in UTC+01:00

----- stderr -----
