tests/snapshots/cli__reflect_current_week_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log-file"
    - "./tests/fixtures/activity_tracker/activities.pace.toml"
    - reflect
    - "--current-week"
---
success: true
exit_code: 0
----- stdout -----
No activities found for the specified time frame

----- stderr -----
