tests/snapshots/cli__reflect_from_to_filter_category_case_sensitive_snapshot_passes.snap
---
source: tests/cli.rs
info:
  program: pace
  args:
    - "--config"
    - tests/fixtures/configs/pace.toml
    - "--activity-log-file"
    - "./tests/fixtures/activity_tracker/activities.pace.toml"
    - reflect
    - "--from"
    - 2024-02-26
    - "--to"
    - 2024-02-28
    - "--category"
    - "*Pace"
    - "--case-sensitive"
---
success: true
exit_code: 0
----- stdout -----
╭──────────┬─────────────┬─────────────────────┬─────────────────╮
│    Your activity insights for the period:                      │
│                                                                │
│    2024-02-26 00:00:00 +01:00 - 2024-02-28 23:59:59 +01:00     │
├──────────┼─────────────┼─────────────────────┼─────────────────┤
│ Category │ Description │ Duration (Sessions) │ Breaks (Amount) │
├──────────┼─────────────┼─────────────────────┼─────────────────┤
│  Total   │             │                  0s │              0s │
╰──────────┴─────────────┴─────────────────────┴─────────────────╯

----- stderr -----
